Update English to British/international spelling (colour, licence, organised, etc.)

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -212,7 +212,7 @@ const pageType = pathWithoutLang.startsWith('about') ? 'about'
             </ul>
           </div>
           <div>
-            <h4 class="text-xl mb-4">{t('footer.license')}</h4>
+            <h4 class="text-xl mb-4">{t('footer.licence')}</h4>
             <p class="text-sm leading-relaxed" style="color: #9A8F85;">
               {t('footer.licenseText')}
             </p>
